--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,4 +1,13 @@
-@import "./reset";
-@import "./variable";
-@import "./index";
 @import "font-awesome";
+@import "config/colors";
+@import "config/size";
+@import "config/reset";
+@import "mixins/mixin";
+@import "mixins/vendor_prefix";
+@import "modules/side_bar";
+@import "modules/chat";
+@import "modules/user";
+@import "messages/messages.scss";
+@import "modules/flash";
+@import "modules/group";
+
