--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -1,17 +1,11 @@
-.messages
-  .message{"data-message_id" => ""}
-    .message__upper-info
-      %p.message__upper-info__talker
-        taro
-      %p.message__upper-info__date
-        2019/05/26(Sun) 14:23:11
-    %p.message__text
-      taro
-  .message{"data-message_id" => ""}
-    .message__upper-info
-      %p.message__upper-info__talker
-        hanako
-      %p.message__upper-info__date
-        2019/05/26(Sun) 14:23:11
-    %p.message__text
-      hanako
+.message
+  .upper-message
+    .upper-message__user-name
+      = message.user.name
+    .upper-message__date
+      = message.created_at.strftime("%Y/%m/%d %H:%M")
+  .lower-meesage
+    - if message.content.present?
+      %p.lower-message__content
+        = message.content
+    = image_tag message.image.url, class: 'lower-message__image' if message.image.present?
