--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -1,46 +1,25 @@
-!!!
-%html
-  %head
-    %meta{:content => "text/html; charset=UTF-8", "http-equiv" => "Content-Type"}/
-    %title ChatSpace
-    %link{:rel => "stylesheet", :type => "scss/css"}/
-  %body
-    .flash-box
-      .notice
-        ログインしました。
-    .wrapper
-      .chat-side
-        .side-header
-          .side-header__box
-            %p.side-header__box__user-name
-              test1
-            %ul.side-header__box__menu
-              %li.side-header__box__menu__new-group
-                %a{:href => "/groups/new"}
-                  %i.fa.fa-edit
-              %li.side-header__box__menu__edit-user
-                %a{:href => "/users/561/edit"}
-                  %i.fa.fa-cog
-        = render partial: "group"
-      .chat-main
-        .main-header
-          .main-header__left-box
-            %h2.main-header__left-box__current-group{"data-group_id" => ""}
-              sumplegroup
-            %ul.main-header__left-box__member-list
-              Member：
-              %li.main-header__left-box__member-list__member
-                taro
-              %li.main-header__left-box__member-list__member
-                hanako
-          %a{:href => ""}
-            .main-header__edit-btn Edit
-        = render partial: "message"
-        .form
-          %form#new_message.new_message{"accept-charset" => "UTF-8", :action => "/groups/1134/messages", :enctype => "multipart/form-data", :method => "post"}
-            .input-box
-              %input#message_content.input-box__text{:name => "message[content]", :placeholder => "type a message", :type => "text"}/
-              %label.input-box__image{:for => "message_image"}
-                %i.fa.fa-image
-                %input#message_image.input-box__image__file{:name => "message[image]", :type => "file"}/
-            %input.submit-btn{"data-disable-with" => "Send", :name => "commit", :type => "submit", :value => "Send"}/
+.wrapper
+  = render 'shared/side_bar'
+  .chat
+    .header
+      .left-header
+        .left-header__title
+          = @group.name
+        %ul.left-header__members
+          Member：
+          - @group.users.each do |user|
+            %li.member
+            = user.name
+      .right-header
+        .right-header__button
+          = link_to "Edit", edit_group_path(@group), class:'right-header__button'
+    .messages
+      = render @messages
+    .form
+      = form_for [@group, @message] do |f|
+        = f.text_field :content, class: 'form__message', placeholder: 'type a message'
+        .form__mask
+          = f.label :image, class: 'form__mask__image' do
+            = fa_icon 'picture-o', class: 'icon'
+            = f.file_field :image, class: 'hidden'
+        = f.submit 'Send', class: 'form__submit'
